// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds extra 1`] = `
ModelError {
  "ckey": undefined,
  "error": "error message",
  "name": "modelName",
  "status": "error",
  "xRequestId": "deadbeef",
}
`;

exports[`creates error response 1`] = `
ModelError {
  "ckey": undefined,
  "error": "error message",
  "name": "modelName",
  "status": "error",
}
`;
